--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: openjdk:8-alpine
+      - image: maven:3.6.3-jdk-8
     branches:
         only:
             - main
